--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -88,7 +88,25 @@
     background-color: #0b0000;
   }
 }
-.opacity-none {
-  transition: all 0.3s ease;
+.opacity-none,
+.opacity-none-2 {
+  transition: 0.3s !important;
+  height: 0;
+  width: 0;
   opacity: 0;
+}
+
+@media screen and (max-width: 500px) {
+  .button,
+  .opacity-none {
+    font-size: 14px;
+    width: 131px;
+    opacity: 1;
+    height: 40px;
+  }
+  .opacity-none-2 {
+    height: 0;
+    width: 0;
+    opacity: 0;
+  }
 }
