--- a/src/components/drawer/drawer.scss
+++ b/src/components/drawer/drawer.scss
@@ -5,61 +5,34 @@
   height: 100vh;
   background-color: #fff;
   z-index: 5;
-  animation-name: toBottom;
-  animation-duration: 0.6s;
-  animation-fill-mode: forwards;
-  overflow-y: auto;
-}
-.drawer-close {
+  transition: transform 0.4s, border-radius 0.4s;
   transform: scaleY(0);
   transform-origin: bottom;
+  overflow-y: auto;
 }
 
 .drawer-open {
-  animation-name: toTop;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  animation-name: identifier;
+  animation-duration: 0.4s;
+  animation-delay: 0.1s;
+  animation-timing-function: ease-out;
+  animation-fill-mode: forwards;
+  transform: scaleY(1);
+  transform-origin: top;
 }
 
-@keyframes toTop {
-  0% {
-    border-bottom-left-radius: 50%;
-    border-bottom-right-radius: 50%;
-    transform: scaleY(0);
-    transform-origin: top;
-  }
-  25% {
-    border-bottom-left-radius: 40%;
-    border-bottom-right-radius: 40%;
-    transform-origin: top;
-  }
-  50% {
-    border-bottom-left-radius: 30%;
-    border-bottom-right-radius: 30%;
-    transform-origin: top;
-  }
-  75% {
-    border-bottom-left-radius: 20%;
-    border-bottom-right-radius: 20%;
-    transform-origin: top;
-  }
-  100% {
+@keyframes identifier {
+  to {
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
-    transform: scaleY(1);
-    transform-origin: top;
   }
 }
 
-@keyframes toBottom {
-  0% {
-    border-top-left-radius: 50%;
-    border-top-right-radius: 50%;
-    transform-origin: bottom;
-  }
-
-  100% {
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    transform: scaleY(0);
-    transform-origin: bottom;
+@media screen and (max-width: 500px) {
+  .drawer-open {
+    border-bottom-left-radius: 0%;
+    border-bottom-right-radius: 0%;
   }
 }
