--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -27,22 +27,22 @@
     width: 55px;
     height: 100%;
     border-radius: 50%;
-    z-index: 1;
+    z-index: -100;
   }
 
   &__line:nth-child(even) {
     width: 100%;
-    height: 2px;
+    height: 3px;
     z-index: 3;
   }
 
   &__line:nth-child(1) {
-    background-image: linear-gradient(180deg, #36a112, #e2b671);
+    background-image: linear-gradient(to right, transparent 90%, #e2b671 93%);
     top: -100%;
     right: -1px;
   }
   &__line:nth-child(3) {
-    background-image: linear-gradient(360deg, #36a112, #e2b671);
+    background-image: linear-gradient(to left, transparent 90%, #e2b671 93%);
     bottom: -100%;
     left: -1px;
   }
@@ -83,9 +83,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 2;
+    z-index: 100;
     border-radius: 80px;
-    background-color: #0b0000;
+    background-color: transparent;
   }
 }
 .opacity-none,
