--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -8,11 +8,29 @@
     rgba(54, 161, 18, 0.6)
   );
   filter: blur(172px);
+  border-radius: 100px;
   z-index: -1;
+
+  animation-name: cursor;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 @media screen and (max-width: 940px) {
   .cursor {
     display: none;
+  }
+}
+
+@keyframes cursor {
+  0% {
+    border-radius: 100px;
+  }
+  100% {
+    border-radius: 50%;
+    width: 542px;
+    height: 542px;
+    filter: blur(160px);
   }
 }
