--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -22,7 +22,7 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px gray;
+  box-shadow: inset 0 0 5px transparent;
   border-radius: 10px;
 }
 
