--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -1,35 +1,63 @@
 .nav__list {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.nav__item + .nav__item {
-  margin-left: 30px;
-}
-
-.nav__link {
+.nav__link-text {
+  display: inline-block;
+  font-size: 140px;
+  text-transform: lowercase;
+  line-height: 0.76471;
+  color: #1d1d1f;
   position: relative;
-  padding-bottom: 9px;
-  font-size: 16px;
-  line-height: 24px;
+  overflow: hidden;
 }
 
-.link-hover::before {
+.nav__link-text > span:nth-child(even) {
+  position: relative;
+  z-index: 3;
+}
+
+.nav__link-text::before {
+  opacity: 0;
   position: absolute;
-  bottom: 0;
-  width: 0;
-  height: 1px;
-  background-color: #000;
-  transition: width 0.4s ease;
-  content: "";
-}
-
-.link-hover:hover::before {
+  top: 60px;
+  left: 0;
   width: 100%;
+  z-index: 1;
+  background-color: #e2b671;
+  height: 15px;
+  content: "";
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: opacity 2s, transform 0.8s;
 }
 
-@media only screen and (max-width: 896px) {
-  .nav__item + .nav__item {
-    margin-left: 20px;
+.nav__link-text:hover::before {
+  transition: opacity 0s, transform 0.8s;
+  opacity: 1;
+  transform: scale(1);
+  transform-origin: left;
+}
+
+@media screen and (max-width: 917px) {
+  .nav__link-text {
+    font-size: 100px;
+  }
+  .nav__link-text::before {
+    top: 40px;
+    height: 10px;
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .nav__link-text {
+    font-size: 50px;
+  }
+  .nav__link-text::before {
+    top: 20px;
+    height: 5px;
   }
 }
