add hero section

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -12,6 +12,7 @@ body {
   font-style: normal;
   color: #ffffff;
   background-color: #0b0000;
+  overflow-x: hidden;
 }
 .body-scroll {
   overflow: hidden;
