--- a/src/components/drawer/drawer.scss
+++ b/src/components/drawer/drawer.scss
@@ -31,8 +31,7 @@
 }
 
 .drawer-open {
-  border-bottom-left-radius: 50%;
-  border-bottom-right-radius: 50%;
+  border-radius: 0 0 100% 100%;
   animation-name: identifier;
   animation-duration: 0.4s;
   animation-delay: 0.1s;
@@ -44,15 +43,13 @@
 
 @keyframes identifier {
   to {
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
+    border-radius: 0 0 0 0;
   }
 }
 
 @media screen and (max-width: 500px) {
   .drawer-open {
-    border-bottom-left-radius: 0%;
-    border-bottom-right-radius: 0%;
+    border-radius: 0 0 10% 10%;
   }
 }
 
