--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -60,6 +60,10 @@
     padding-top: 20px;
     padding-bottom: 20px;
     border-bottom: 1px gray solid;
+    background-color: #0b0000;
+  }
+  .header-open {
+    background-color: #fff;
   }
   .menu-burger {
     width: 48px;
