--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -12,7 +12,6 @@
   border-radius: 80px;
   transition: 0.4s;
   transition-delay: 0.5s;
-
   &:hover {
     background-color: var(--bg);
     border-color: var(--hover);
@@ -26,8 +25,9 @@
   }
   &__line:nth-child(odd) {
     width: 55px;
-    height: 100%;
+    height: 200%;
     border-radius: 50%;
+    margin: auto;
     z-index: -100;
   }
 
@@ -38,13 +38,22 @@
   }
 
   &__line:nth-child(1) {
-    background-image: linear-gradient(to right, transparent 93%, #e2b671 95%);
-    top: -100%;
+    background-image: linear-gradient(
+      to right,
+      transparent 93%,
+      var(--bgLine) 95%
+    );
+    top: -120%;
+
     right: -1px;
   }
   &__line:nth-child(3) {
-    background-image: linear-gradient(to left, transparent 93%, #e2b671 95%);
-    bottom: -100%;
+    background-image: linear-gradient(
+      to left,
+      transparent 93%,
+      var(--bgLine) 95%
+    );
+    bottom: -120%;
     left: -1px;
   }
 
