--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  height: 2000px;
+  position: relative;
 }
 .hero__inner {
   padding-top: 200px;
@@ -44,7 +44,7 @@
   font-weight: 800;
   position: relative;
   font-size: 170px;
-  line-height: 1;
+  line-height: 0.7;
 }
 .hero__conversion {
   display: inline-block;
@@ -83,6 +83,59 @@
     border-color: #36a112;
   }
 }
+.vector {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: -300px;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  &__border {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: #36a112 1px solid;
+    transition: 0.4s;
+  }
+
+  &__img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+
+    & > svg > path {
+      transition: 0.4s;
+    }
+  }
+}
+
+.vector:hover {
+  .vector__border {
+    position: relative;
+    display: inline-block;
+    width: 50%;
+    height: 50%;
+    border-radius: 50%;
+    border: #36a112 1px solid;
+    background-color: #36a112;
+  }
+
+  .vector__img {
+    & > svg > path {
+      stroke: #fff;
+    }
+  }
+}
 
 @media screen and (max-width: 1200px) {
   .hero__texts {
@@ -96,6 +149,9 @@
   }
   .hero__texts {
     font-size: 100px;
+  }
+  .vector {
+    display: none;
   }
 }
 @media screen and (max-width: 717px) {
