--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -7,7 +7,6 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 22px;
-  overflow: hidden;
   border: 1px solid var(--color);
   border-radius: 80px;
   transition: 0.4s;
@@ -18,70 +17,17 @@
     color: var(--hover);
   }
 
-  &__line {
-    position: absolute;
-    display: inline-block;
-    transition: 0.5s;
+  &:hover > &__svg > rect {
+    stroke-dashoffset: -480;
   }
-  &__line:nth-child(odd) {
-    width: 55px;
-    height: 200%;
-    border-radius: 50%;
-    margin: auto;
-    z-index: -100;
+  &__svg {
+    pointer-events: none;
   }
-
-  &__line:nth-child(even) {
-    width: 100%;
-    height: 3px;
-    z-index: 3;
-  }
-
-  &__line:nth-child(1) {
-    background-image: linear-gradient(
-      to right,
-      transparent 93%,
-      var(--bgLine) 95%
-    );
-    top: -120%;
-
-    right: -1px;
-  }
-  &__line:nth-child(3) {
-    background-image: linear-gradient(
-      to left,
-      transparent 93%,
-      var(--bgLine) 95%
-    );
-    bottom: -120%;
-    left: -1px;
-  }
-
-  &__line:nth-child(2) {
-    background-image: linear-gradient(90deg, #36a112, #e2b671);
-    left: -100%;
-    top: -1px;
-  }
-  &__line:nth-child(4) {
-    bottom: -1px;
-    right: -100%;
-    background-image: linear-gradient(270deg, #36a112, #e2b671);
-  }
-
-  &:hover > &__line:nth-child(1) {
-    transition-delay: 0.25s;
-    top: 100%;
-  }
-  &:hover > &__line:nth-child(2) {
-    left: 100%;
-  }
-  &:hover > &__line:nth-child(3) {
-    transition-delay: 0.75s;
-    bottom: 100%;
-  }
-  &:hover > &__line:nth-child(4) {
-    right: 100%;
-    transition-delay: 0.5s;
+  &__svg > rect {
+    stroke: var(--bgLine);
+    transition: 1s ease-in-out;
+    stroke-dasharray: 150 480;
+    stroke-dashoffset: 150;
   }
 
   .button__text {
@@ -93,9 +39,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 100;
+    z-index: 1;
     border-radius: 80px;
-    background-color: transparent;
   }
 }
 .opacity-none,
@@ -118,5 +63,18 @@
     height: 0;
     width: 0;
     opacity: 0;
+  }
+
+  .button__svg {
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: -2px;
+    bottom: 0;
+  }
+  .button__svg > rect {
+    width: 131px;
+    height: 40px;
+    rx: 20px;
   }
 }
