--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -25,11 +25,7 @@
   width: 100%;
   height: 100%;
   border-radius: 60px;
-  background-image: linear-gradient(
-    0deg,
-    rgba(0, 0, 0, 0.2),
-    rgba(0, 0, 0, 0.2)
-  );
+  scroll-behavior: smooth;
   & > img {
     transform: 0.3s;
     border-radius: 60px;
