--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -13,6 +13,10 @@
   color: #1d1d1f;
   position: relative;
   overflow: hidden;
+
+  & > span {
+    display: inline-block;
+  }
 }
 
 .nav__link-text > span:nth-child(even) {
