--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -10,3 +10,9 @@
     color: rgba(255, 255, 255, 0.9);
   }
 }
+
+@media screen and (max-width: 500px) {
+  .slider {
+    margin-top: 250px;
+  }
+}
