--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -10,11 +10,16 @@
   filter: blur(172px);
   border-radius: 100px;
   z-index: -1;
+  transition: background 0.3s;
 
   animation-name: cursor;
   animation-duration: 1s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
+}
+.cursor-green {
+  background-image: none;
+  background-color: rgba(54, 161, 18, 0.6);
 }
 
 @media screen and (max-width: 940px) {
