--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -9,8 +9,8 @@
   line-height: 22px;
   border: 1px solid var(--color);
   border-radius: 80px;
-  transition: 0.4s;
-  transition-delay: 0.5s;
+  transition: 0.5s;
+
   &:hover {
     background-color: var(--bg);
     border-color: var(--hover);
@@ -53,6 +53,7 @@
   height: 0;
   width: 0;
   opacity: 0;
+  font-size: 0;
 }
 
 @media screen and (max-width: 500px) {
@@ -67,18 +68,19 @@
     height: 0;
     width: 0;
     opacity: 0;
+    font-size: 0;
   }
 
   .button__svg {
     position: absolute;
     right: 0;
-    left: 0;
-    top: -2px;
+    left: -1px;
+    top: -1px;
     bottom: 0;
   }
   .button__svg > rect {
     width: 131px;
-    height: 40px;
+    height: 39px;
     rx: 20px;
   }
 }
