--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -2,6 +2,7 @@
   margin-top: 400px;
 
   &__title {
+    font-family: "K2D", sans-serif;
     max-width: 599px;
     font-weight: 600;
     font-size: 36px;
@@ -14,5 +15,9 @@
 @media screen and (max-width: 500px) {
   .slider {
     margin-top: 250px;
+    &__title {
+      font-size: 24px;
+      line-height: 24px;
+    }
   }
 }
