--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -75,14 +75,18 @@
 .skills__item:hover .skills__item-img {
   width: 120px;
   height: 160px;
+  opacity: 1;
 }
 .skills__item-img {
-  position: fixed;
+  position: absolute;
   width: 0px;
   height: 0px;
   border-radius: 10px;
-  background-color: red;
-  transition: height 0.5s linear, width 0.5s linear;
+  opacity: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  transition: height 0.5s linear, width 0.5s linear, opacity 0.5s linear;
 }
 
 @media screen and (max-width: 940px) {
@@ -92,6 +96,9 @@
     &__list {
       margin-top: 150px;
     }
+  }
+  .skills__item-img {
+    display: none;
   }
 }
 
