--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -3,6 +3,7 @@
 }
 
 .works__inner {
+  pointer-events: none;
   font-family: "K2D", sans-serif;
   font-weight: 800;
   position: relative;
@@ -11,6 +12,7 @@
 }
 
 .works__button {
+  pointer-events: painted;
   margin-top: 50px;
   margin-left: 20px;
 }
