--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -28,10 +28,10 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #36a112;
+  background-color: #e2b671;
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #26780a;
+  background-color: #f1b656;
 }
