--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,9 +1,41 @@
 .footer {
-  margin-top: 00px;
   position: relative;
-  padding-top: 200px;
+  padding-top: 100px;
   padding-bottom: 114px;
   background-color: #36a112;
+
+  &__inner {
+    margin-bottom: 84px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__form {
+    max-width: 377px;
+  }
+  &__address {
+    max-width: 420px;
+  }
+
+  &__title {
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    font-family: "Outfit";
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  &__info {
+    margin-bottom: 67px;
+    font-family: "K2D", sans-serif;
+    font-weight: 800;
+    font-size: 90px;
+    line-height: 64px;
+    letter-spacing: -0.06em;
+    color: #000000;
+  }
+
   // &::before {
   //   position: absolute;
   //   top: -100px;
@@ -26,5 +58,106 @@
     width: 100%;
     height: 1.5px;
     background-color: rgba(0, 0, 0, 0.3);
+  }
+}
+.footer__input {
+  width: 100%;
+}
+.footer__input > label {
+  font-family: "Outfit", sans-serif;
+  font-weight: 700;
+  line-height: 20px;
+  color: white !important;
+  color: #ffffff;
+}
+.footer__input > div::before {
+  border-bottom-width: 2px;
+  border-color: #000000;
+}
+.footer__input > div {
+  padding-bottom: 20px;
+}
+.footer__input > div > input {
+  color: white;
+}
+.footer__input > div::after {
+  border-color: white !important;
+}
+.footer__form-form {
+  position: relative;
+}
+
+.footer__button {
+  position: absolute;
+  bottom: 20px;
+  right: 0px;
+  width: 66px;
+  height: 66px;
+  background-color: #fff;
+  background-image: url("../../assets/images/vector-burtton.svg");
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: center;
+  border-radius: 50%;
+  transition: opacity 0.4s ease;
+}
+
+.footer__button:hover {
+  opacity: 0.7;
+}
+.footer__address-content {
+  display: flex;
+  flex-direction: column;
+}
+.footer__address-link {
+  margin-bottom: 24px;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 50px;
+  text-transform: lowercase;
+  color: #000000;
+}
+.footer__address-link:nth-child(3) {
+  margin-bottom: 0;
+  margin-top: 34px;
+  text-transform: none;
+}
+
+@media screen and (max-width: 866px) {
+  .footer__form {
+    margin-bottom: 40px;
+  }
+  .footer__inner {
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 489px) {
+  .footer {
+    padding-bottom: 50px;
+
+    &__info {
+      margin-bottom: 47px;
+      font-size: 50px;
+      line-height: 34px;
+    }
+    &__line {
+      bottom: 50px;
+    }
+  }
+
+  .footer__address-link {
+    margin-bottom: 20px;
+    font-size: 28px;
+    line-height: 24px;
+  }
+  .footer__address-link:nth-child(3) {
+    margin-bottom: 0;
+    margin-top: 25px;
+    text-transform: none;
+  }
+  .footer__button {
+    width: 50px;
+    height: 50px;
   }
 }
