--- a/src/components/carousel/carousel.scss
+++ b/src/components/carousel/carousel.scss
@@ -3,43 +3,34 @@
   margin-bottom: 50px;
 
   &__item {
+    position: relative;
     width: 600px !important;
-    height: 600px !important;
+    height: 700px !important;
     border-radius: 60px;
-    overflow: hidden;
   }
   &__link {
     display: inline-block;
     width: 100%;
     height: 100%;
   }
-
-  &__img {
-    width: 100%;
-    height: 100%;
-    border-radius: 60px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
-    transition: 0.7s !important;
-    &:hover {
-      background-size: 110%;
-    }
-  }
+}
+.corousel__block {
+  width: 100%;
+  height: 600px !important;
+  overflow: hidden;
+  border-radius: 60px;
 }
 
-@media screen and (max-width: 700px) {
-  .corousel {
-    margin-top: 200px;
-
-    &__item {
-      width: 400px !important;
-      height: 400px !important;
-      border-radius: 40px;
-    }
-    &__img {
-      border-radius: 40px;
-    }
+.corousel__img {
+  width: 100%;
+  height: 100%;
+  border-radius: 60px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  transition: 0.7s !important;
+  &:hover {
+    background-size: 110%;
   }
 }
 .corousel__swiper:hover ~ .corousel__drag {
@@ -71,8 +62,73 @@
   background-color: #36a112;
   border-radius: 50%;
 }
+.corousel__item:hover > .corousel__texts {
+  bottom: 50px;
+
+  & > p {
+    opacity: 1;
+  }
+
+  & > h3 {
+    opacity: 1;
+  }
+
+  & > span {
+    opacity: 1;
+  }
+}
+.corousel__texts {
+  pointer-events: none;
+  max-width: 300px;
+  position: absolute;
+  left: 30px;
+  margin: auto;
+  bottom: 0;
+  transition: 0.5s;
+
+  & > p {
+    font-size: 24px;
+    transition: 0.5s;
+    opacity: 0;
+  }
+
+  & > h3 {
+    font-size: 28px;
+    font-weight: bold;
+    transition-delay: 0.1s;
+    transition: 0.5s;
+    opacity: 0;
+  }
+
+  & > span {
+    font-weight: 700;
+    color: #36a112;
+    transition-delay: 0.2s;
+    transition: 0.5s;
+    opacity: 0;
+  }
+}
+
 @media screen and (max-width: 940px) {
   .corousel__drag {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .corousel {
+    margin-top: 200px;
+
+    &__item {
+      width: 400px !important;
+      height: 400px !important;
+      border-radius: 40px;
+    }
+    &__img {
+      border-radius: 40px;
+    }
+  }
+  .corousel__texts {
     display: none;
   }
 }
