--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,8 +1,11 @@
 .footer {
   position: relative;
-  padding-top: 100px;
+  padding-top: 200px;
   padding-bottom: 114px;
-  background-color: #36a112;
+  background-image: url("../../assets/images/bg-footer.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-x: center;
 
   &__inner {
     margin-bottom: 84px;
@@ -35,20 +38,6 @@
     letter-spacing: -0.06em;
     color: #000000;
   }
-
-  // &::before {
-  //   position: absolute;
-  //   top: -100px;
-  //   right: 0;
-  //   left: -20%;
-  //   margin: auto;
-  //   width: 140%;
-  //   height: 100%;
-  //   border-top-left-radius: 50%;
-  //   border-top-right-radius: 50%;
-  //   background-color: #36a112;
-  //   content: "";
-  // }
 
   &__line {
     position: absolute;
@@ -110,6 +99,7 @@
   flex-direction: column;
 }
 .footer__address-link {
+  position: relative;
   margin-bottom: 24px;
   font-weight: 400;
   font-size: 48px;
@@ -117,6 +107,26 @@
   text-transform: lowercase;
   color: #000000;
 }
+
+.footer__address-link::before {
+  position: absolute;
+  display: inline-block;
+  right: 0;
+  left: 0;
+  bottom: -15px;
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 1s;
+  content: "";
+}
+.footer__address-link:hover::before {
+  transform: scale(1);
+  transform-origin: left;
+}
+
 .footer__address-link:nth-child(3) {
   margin-bottom: 0;
   margin-top: 34px;
@@ -124,6 +134,9 @@
 }
 
 @media screen and (max-width: 866px) {
+  .footer {
+    padding-top: 150px;
+  }
   .footer__form {
     margin-bottom: 40px;
   }
@@ -134,6 +147,7 @@
 }
 @media screen and (max-width: 489px) {
   .footer {
+    padding-top: 100px;
     padding-bottom: 50px;
 
     &__info {
