add new options

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -35,3 +35,12 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background-color: #f1b656;
 }
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
