--- a/src/components/carousel/carousel.scss
+++ b/src/components/carousel/carousel.scss
@@ -4,8 +4,8 @@
 
   &__item {
     position: relative;
-    width: 600px !important;
-    height: 700px !important;
+    width: 400px !important;
+    height: 400px !important;
     border-radius: 60px;
   }
   &__link {
@@ -16,7 +16,7 @@
 }
 .corousel__block {
   width: 100%;
-  height: 600px !important;
+  height: 300px !important;
   overflow: hidden;
   border-radius: 60px;
 }
@@ -63,7 +63,7 @@
   border-radius: 50%;
 }
 .corousel__item:hover > .corousel__texts {
-  bottom: 50px;
+  bottom: 10px;
 
   & > p {
     opacity: 1;
@@ -73,21 +73,27 @@
     opacity: 1;
   }
 
-  & > span {
+  & > p > span {
     opacity: 1;
   }
 }
 .corousel__texts {
+  display: flex;
+  align-items: center;
   pointer-events: none;
   max-width: 300px;
   position: absolute;
   left: 30px;
   margin: auto;
-  bottom: 0;
+  bottom: -50px;
   transition: 0.5s;
 
   & > p {
-    font-size: 24px;
+    max-width: 223px;
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
+    font-size: 1 4px;
     transition: 0.5s;
     opacity: 0;
   }
@@ -97,15 +103,16 @@
     font-weight: bold;
     transition-delay: 0.1s;
     transition: 0.5s;
+    color: #36a112;
     opacity: 0;
   }
 
-  & > span {
-    font-weight: 700;
-    color: #36a112;
-    transition-delay: 0.2s;
-    transition: 0.5s;
-    opacity: 0;
+  & > p > span {
+    margin-right: 11px;
+    display: inline-block;
+    width: 3px;
+    height: 31px;
+    background-color: #e2b671;
   }
 }
 
@@ -113,37 +120,27 @@
   .corousel__drag {
     display: none;
   }
+
+  .corousel__texts {
+    bottom: 10px;
+    & > p {
+      opacity: 1;
+    }
+
+    & > h3 {
+      opacity: 1;
+    }
+  }
 }
 
 @media screen and (max-width: 700px) {
   .corousel {
     margin-top: 200px;
-
-    &__item {
-      width: 400px !important;
-      height: 400px !important;
-      border-radius: 40px;
-    }
-    &__img {
-      border-radius: 40px;
-    }
-  }
-  .corousel__texts {
-    display: none;
   }
 }
 
 @media screen and (max-width: 500px) {
   .corousel {
     margin-top: 100px;
-
-    &__item {
-      width: 200px !important;
-      height: 200px !important;
-      border-radius: 20px;
-    }
-    &__img {
-      border-radius: 20px;
-    }
   }
 }
