--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -30,11 +30,11 @@
   }
 
   &__info {
-    margin-bottom: 67px;
+    margin-bottom: 50px;
     font-family: "K2D", sans-serif;
     font-weight: 800;
-    font-size: 90px;
-    line-height: 64px;
+    font-size: 80px;
+    line-height: 1;
     letter-spacing: -0.06em;
     color: #000000;
   }
@@ -78,15 +78,15 @@
 
 .footer__button {
   position: absolute;
-  bottom: 20px;
-  right: 0px;
+  bottom: 10px;
+  right: -100px;
   width: 66px;
   height: 66px;
-  background-color: #fff;
-  background-image: url("../../assets/images/vector-burtton.svg");
-  background-repeat: no-repeat;
-  background-size: auto;
-  background-position: center;
+  background-color: #fff !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
   border-radius: 50%;
   transition: opacity 0.4s ease;
 }
@@ -102,7 +102,7 @@
   position: relative;
   margin-bottom: 24px;
   font-weight: 400;
-  font-size: 48px;
+  font-size: 40px;
   line-height: 50px;
   text-transform: lowercase;
   color: #000000;
@@ -145,6 +145,12 @@
     justify-content: center;
   }
 }
+@media screen and (max-width: 503px) {
+  .footer__button {
+    right: -50px;
+  }
+}
+
 @media screen and (max-width: 489px) {
   .footer {
     padding-top: 100px;
@@ -171,6 +177,8 @@
     text-transform: none;
   }
   .footer__button {
+    right: -10px;
+    bottom: 20px;
     width: 50px;
     height: 50px;
   }
