--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -95,6 +95,7 @@
   }
 }
 .vector {
+  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -103,6 +104,7 @@
   width: 200px;
   height: 200px;
   border-radius: 50%;
+  transform: rotate(180deg);
   &__border {
     position: relative;
     display: inline-block;
