--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -5,50 +5,51 @@
   font-size: 36px;
   color: #36a112;
   line-height: 40px;
-  & > span {
-    display: inline-block;
-    transition: 0.5s;
-  }
 
-  &__img {
-    position: absolute;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    top: 0;
-    margin: auto;
-    opacity: 0;
-    transition: 0.5s;
-    transform: translateY(-10px);
-  }
+  // & > span {
+  //   display: inline-block;
+  //   transition: 0.5s;
+  // }
+
+  // &__img {
+  //   position: absolute;
+  //   right: 0;
+  //   left: 0;
+  //   bottom: 0;
+  //   top: 0;
+  //   margin: auto;
+  //   opacity: 0;
+  //   transition: 0.5s;
+  //   transform: translateY(-10px);
+  // }
 }
 
-.logo-nav {
-  color: #e2b671;
-}
-.logo-scroll {
-  & .logo__img {
-    opacity: 1;
-    transform: translateY(0px);
-  }
+// .logo-nav {
+//   color: #e2b671;
+// }
+// .logo-scroll {
+//   & .logo__img {
+//     opacity: 1;
+//     transform: translateY(0px);
+//   }
 
-  & > span:nth-child(1) {
-    transform: translateX(10px) rotate(1deg);
-    opacity: 0;
-  }
-  & > span:nth-child(2) {
-    transform: translateX(-5px) rotate(1deg);
-    opacity: 0;
-  }
-  & > span:nth-child(3) {
-    transform: translateX(-10px) rotate(-1deg);
-    opacity: 0;
-  }
-  & > span:nth-child(4) {
-    transform: translateX(-20px) rotate(-1deg);
-    opacity: 0;
-  }
-}
+//   & > span:nth-child(1) {
+//     transform: translateX(10px) rotate(1deg);
+//     opacity: 0;
+//   }
+//   & > span:nth-child(2) {
+//     transform: translateX(-5px) rotate(1deg);
+//     opacity: 0;
+//   }
+//   & > span:nth-child(3) {
+//     transform: translateX(-10px) rotate(-1deg);
+//     opacity: 0;
+//   }
+//   & > span:nth-child(4) {
+//     transform: translateX(-20px) rotate(-1deg);
+//     opacity: 0;
+//   }
+// }
 
 @media screen and (max-width: 500px) {
   .logo {
